# crdn-parser

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  .pdm.toml  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  poetry.toml  pyproject.toml  scrapy.cfg
docker/: crontab  parser-supervisor.conf  supervisord.conf
docker/supervisord.conf.d/: parser-supervisor.conf
kolesa_parser/: db.py  debug_save.py  helpers.py  items.py  middlewares.py  parse_page.py  pipelines.py  settings.py
kolesa_parser/spiders/: kolesa_spider.py  mainpage_spider.py  single_page.py
