[tool.pdm]
[tool.pdm.dev-dependencies]
dev = []

[tool.pdm.scripts]
_.env_file = ".env"
migrate = "alembic upgrade head"
crawl = "scrapy crawl kolesa-spider"

[project]
name = ""
version = "0.1.0"
description = ""
dependencies = [
    "psycopg2-binary>=2.9.6",
    "python-dotenv>=1.0.0",
    "click>=8.1.3",
    "Scrapy>=2.8.0",
    "scrapy-fake-useragent>=1.4.4",
    "scrapy-rotating-proxies>=0.6.2",
    "scrapy-user-agents>=0.1.1",
    "dateparser>=1.1.8",
    "sentry-sdk>=1.19.1",
    "SQLAlchemy<2.0,>=1.4.41",
]
requires-python = ">=3.11,<4.0"
license = { text = "None" }
